Opened 8 years ago
Closed 7 years ago
#9809 closed bug (fixed)
Terminal uses incorrect line count after adding new tab
Reported by: | ThFabba | Owned by: | jackburton |
---|---|---|---|
Priority: | low | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/alpha4.1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
After adding a second tab, the terminal line count reported to applications seems to be wrong in the first tab.
(Resolution: 1024x768)
To reproduce:
- Start Terminal and maximize it
- Terminal -> New Tab (Alt+T)
- Alt+1 to switch back to the first tab
- nano /var/log/syslog
- Note that nano is only showing one menu line (attached screenshot)
- Press Page Down, some text from the previous page will appear instead of the text that should be there ("USER: failed to create the required index ..." in screenshot)
- Page Up, Page Down, second page text now displays right
Same happens again after closing and reopening nano. Does not happen in second tab (Alt+2). Resizing the Terminal window fixes the issue.
Attachments (1)
Change History (4)
by , 8 years ago
Attachment: | Haiku-terminal-bug-nano.png added |
---|
comment:2 by , 8 years ago
Just to clear:
- Start Terminal;
~> tput lines ~> 37
- <Alt-T>
~> tput lines # second tab ~> 36
That is OK - the tabline was added above and height of terminal view was decreased.
- <Alt-1>
~> tput lines # first tab ~> 37
That is wrong - the height must be adjusted because change of viewport's height too.
Looks like corresponding window size change signal is not send to the first tab's application after adding/removing tabs.
comment:3 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev46011. Thank you for report.
Screenshot