Terminal:send resize notify on attaching window to view

During adding the second tab the view in the first one may change its
lines count in case the Terminal window was maximized. Send resize
notification to client rpogram on every reattaching view to window.

Fixes #9809